# cse204

./: .gitignore
assignment-1/: CMakeLists.txt  arraylist.h  console_helper.cpp  console_helper.h  console_test.cpp  linkedlist.h  list.h  test.cpp  tests.cpp  tnl.cpp
assignment-1/.cache/clangd/index/: arraylist.h.FE8F77797A34438C.idx  list.h.110C3F8B52258D13.idx  test.cpp.B4A0E4D3C6459A1A.idx  tnl.cpp.2442AFDEDF267197.idx
assignment-2/: CMakeLists.txt  arraystack.h  console_helper.cpp  console_helper.h  console_test.cpp  dishwasher.cpp  linkedstack.h  stack.h  tests.cpp
assignment-3/: CMakeLists.txt  arrayqueue.h  bank.cpp  console_helper.cpp  console_helper.h  console_test.cpp  linkedqueue.h  queue.h  tests.cpp
assignment-4/: CMakeLists.txt  bstree.h  main.cpp  test_input2.txt  tests.cpp
assignment-5/: CMakeLists.txt  heap.h  test_input3.txt  tests.cpp
assignment-6/: CMakeLists.txt  checker.cpp  generator.cpp  input.txt  main.cpp  utils.cpp  utils.h
assignment-7/: CMakeLists.txt  main.cpp  sort.h  tests.cpp
assignment-9/: 1.cpp  1.h  2.cpp  2.h  CMakeLists.txt  test_generator.cpp
